--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,67 @@
 <footer class="footer">
     <div class="page__container">
-        
+        <div class="footer__top">
+            <a href="/" class="footer__logo"></a>
+            <nav class="footer__menu">
+                <ul>
+                    <li><a href="#">Каталог</a></li>
+                    <li><a href="#">Акции</a></li>
+                    <li><a href="#">Доставка и оплата</a></li>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="footer__info">
+                <a href="tel:+73462229001" class="phone footer__phone">
+                    <div class="background">
+                        <svg>
+                            <use href="./img/icons/icons.svg#phone"></use>
+                        </svg>
+                    </div>
+
+                    <p>+7 3462 22-90-01</p>
+                </a>
+                <div class="address footer__address">
+                    <div class="background">
+                        <svg>
+                            <use href="./img/icons/icons.svg#address"></use>
+                        </svg>
+                    </div>
+
+                    <p>Сургут, Индустриальная 34, оф. 21</p>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="footer__bottom">
+            <p class="footer__copyright">2013-2016 г., «Фабрика подарков»</p>
+            <a href="" class="footer__politics">Политика обработки персональных данных</a>
+            <ul class="social footer__social">
+                <li>
+                    <a class="social__wa" href="">
+                        <svg>
+                            <use href="./img/icons/icons.svg#whatsapp"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social__vk" href="">
+                        <svg>
+                            <use href="./img/icons/icons.svg#vk"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social__viber" href="">
+                        <svg>
+                            <use href="./img/icons/icons.svg#viber"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social__message">
+                    <p>Пишите нам, <b>мы на связи</b></p>
+                </li>
+            </ul>
+        </div>
     </div>
 </footer>
