--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header background-white">
     <div class="header__container page__container">
         <a href="/" class="header__logo"></a>
         <div class="address header__address">
