--- a/src/html/reviews.html
+++ b/src/html/reviews.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section background-white">
     <div class="page__container">
         <div style="max-width: 1250px;" class="section__with-arrows">
             <h2 class="section__title section__title_left">Отзывы и благодарности</h2>
