--- a/src/html/suppliers.html
+++ b/src/html/suppliers.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section background-white">
     <div class="page__container">
         <h2 class="section__title section__title_left">Поставщики</h2>
         <div class="suppliers">
