--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 })
 
 <body>
-	<div class="page">
+	<div class="page background-lightgray">
 
 		@@include('html/header.html',{})
 
@@ -46,49 +46,7 @@
 			@@include('html/reviews.html',{})
 			<hr style="border: 0; border-bottom: 1px solid rgba(0, 0, 0, 0.1);">
 			@@include('html/suppliers.html',{})
-			<section class="section section_faq">
-				<div class="page__container">
-					<form class="form form_faq">
-						<h2 class="form__title">Остались вопросы?</h2>
-						<div class="form__rows">
-							<div class="form__row">
-								<input placeholder="Имя" type="text" minlength="2" >
-							</div>
-							<div class="form__row">
-								<input placeholder="Email*" required type="email" >
-							</div>
-							<div class="form__row">
-								<input  placeholder="Телефон" type="tel" id="phone" >
-							</div>
-							<div class="form__row">
-								<textarea required placeholder="Ваш вопрос*" rows="5"></textarea>
-							</div>
-						</div>
-						<button class="btn">отправить</button>
-						<div class="messengers">
-							<p class="messengers__title">Или напишите нам в мессенджеры</p>
-							<ul class="messengers__list">
-								<li class="messengers__item">
-									<a href="#" class="messengers__link wa">
-										<svg>
-											<use href="./img/icons/icons.svg#whatsapp"></use>
-										</svg>
-										<span>
-											Написать в WhatsApp
-										</span> </a>
-								</li>
-								<li class="messengers__item">
-									<a href="#" class="messengers__link viber">
-										<svg>
-											<use href="./img/icons/icons.svg#viber"></use>
-										</svg>
-										<span>Написать в Viber</span></a>
-								</li>
-							</ul>
-						</div>
-					</form>
-				</div>
-			</section>
+			@@include('html/faq.html',{})
 		</main>
 		@@include('html/footer.html',{})
 		<div id="photo" class="popup">
