--- a/src/catalog.html
+++ b/src/catalog.html
@@ -22,8 +22,8 @@
                 <div class="right-block">
                     <p class="catalog__counter"><span><b>250 подарков</b> найдено</span></p>
                     <div class="selects">
-                        <button data-pointer="filter" class="select select_empty">Фильтр</button>
-                        <button data-pointer="left-menu" class="select select_empty">Все подарки</button>
+                        <button data-pointer="filter" class="select select_empty"><b>Фильтр</b></button>
+                        <button data-pointer="left-menu" class="select select_empty"><b>Все подарки</b></button>
                         <div class="select">
                             <button class="select__btn"></button>
                             <ul class="select__list">
@@ -59,8 +59,8 @@
                         <a href="" class="pagination__next"></a>
                     </div>
                 </div>
-
             </div>
+            @@include('html/popular.html', {})
         </main>
         @@include('html/footer.html',{})
         <div id="photo" class="popup">
