--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -4,19 +4,19 @@
             <h2 class="form__title">Остались вопросы?</h2>
             <div class="form__rows">
                 <div class="form__row">
-                    <input placeholder="Имя" type="text" minlength="2" >
+                    <input autocomplete="off" placeholder="Имя" type="text" minlength="2">
                 </div>
                 <div class="form__row">
-                    <input placeholder="Email*" required type="email" >
+                    <input autocomplete="off" placeholder="Email*" required type="email">
                 </div>
                 <div class="form__row">
-                    <input  placeholder="Телефон" type="tel" id="phone" >
+                    <input autocomplete="off" required placeholder="Телефон" type="tel" id="phone">
                 </div>
                 <div class="form__row">
-                    <textarea required placeholder="Ваш вопрос*" rows="5"></textarea>
+                    <textarea minlength="5" autocomplete="off" required placeholder="Ваш вопрос*" rows="5"></textarea>
                 </div>
             </div>
-            <button class="btn">отправить</button>
+            <button disabled class="btn">отправить</button>
             <div class="messengers">
                 <p class="messengers__title">Или напишите нам в мессенджеры</p>
                 <ul class="messengers__list">
