--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -4,16 +4,17 @@
             <h2 class="form__title">Остались вопросы?</h2>
             <div class="form__rows">
                 <div class="form__row">
-                    <input autocomplete="off" placeholder="Имя" type="text" minlength="2">
+                    <input autocomplete="off" placeholder="Имя" name type="text" minlength="2">
                 </div>
                 <div class="form__row">
-                    <input autocomplete="off" placeholder="Email*" required type="email">
+                    <input autocomplete="off" placeholder="Email*" name required type="email">
                 </div>
                 <div class="form__row">
-                    <input autocomplete="off" required placeholder="Телефон" type="tel" id="phone">
+                    <input autocomplete="off" minlength="17" placeholder="Телефон" name type="tel" id="phone">
                 </div>
                 <div class="form__row">
-                    <textarea minlength="5" autocomplete="off" required placeholder="Ваш вопрос*" rows="5"></textarea>
+                    <textarea minlength="5" autocomplete="off" required name placeholder="Ваш вопрос*"
+                        rows="5"></textarea>
                 </div>
             </div>
             <button disabled class="btn">отправить</button>
