--- a/src/html/popular.html
+++ b/src/html/popular.html
@@ -1,7 +1,7 @@
 <section class="section background-white">
     <div class="page__container">
         <div style="max-width: 1250px;" class="section__with-arrows">
-            <h2 class="section__title section__title_left">Самые популярные</h2>
+            <h2 class="section__title section__title_left">@@title</h2>
             <div class="section__arrows">
                 <button class="arrow arrow_left swiper-button-popular-prev "></button>
                 <button class="arrow arrow_right swiper-button-popular-next"></button>
