--- a/src/detail.html
+++ b/src/detail.html
@@ -21,20 +21,18 @@
                         <div class="detail__product">
                             <div class="detail__product-left">
                                 <ul class="labels">
-                                    <ul class="labels">
-                                        <li style="background:#0FB429;">
-                                            <img src="./img/labels/1.png">
-                                            <span>Новинка</span>
-                                        </li>
-                                        <li style="background:#5B3AB9;">
-                                            <img src="./img/labels/3.png">
-                                            <span>Хит</span>
-                                        </li>
-                                        <li style="background:#E02F2F;">
-                                            <img src="./img/labels/2.png">
-                                            <span>Акция</span>
-                                        </li>
-                                    </ul>
+                                    <li style="background:#0FB429;">
+                                        <img src="./img/labels/1.png">
+                                        <span>Новинка</span>
+                                    </li>
+                                    <li style="background:#5B3AB9;">
+                                        <img src="./img/labels/3.png">
+                                        <span>Хит</span>
+                                    </li>
+                                    <li style="background:#E02F2F;">
+                                        <img src="./img/labels/2.png">
+                                        <span>Акция</span>
+                                    </li>
                                 </ul>
                                 <div thumbsslider class="swiper detail-swiper-thumbs">
                                     <div class="swiper-wrapper">
@@ -121,7 +119,7 @@
                                         <td>28 конфет</td>
                                     </tr>
                                 </table>
-                                <a href="#test" class="detail__scroll">Смотреть состав подарка</a>
+                                <a href="#structure" class="detail__scroll">Смотреть состав подарка</a>
                             </div>
                         </div>
 
@@ -156,13 +154,84 @@
                             </div>
                         </div>
                     </section>
-                    <section class="detail__section"></section>
+                    <section id="structure" class="detail__section">
+
+                        <div class="detail__structure">
+                            <h3 class="detail__title">Состав подарка</h3>
+                            <ul>
+                                <li>
+                                    <div>
+                                        <img src="./img/slavyanka.png">
+                                        <h3>Славяночка шоколадная</h3>
+                                        <p>Славянка</p>
+                                    </div>
+                                    <p>1 шт.</p>
+                                </li>
+                                <li>
+                                    <div>
+                                        <img src="./img/slavyanka.png">
+                                        <h3>Славяночка шоколадная</h3>
+                                        <p>Славянка</p>
+                                    </div>
+                                    <p>3 шт.</p>
+                                </li>
+                                <li>
+                                    <div>
+                                        <img src="./img/slavyanka.png">
+                                        <h3>Славяночка шоколадная</h3>
+                                        <p>Славянка</p>
+                                    </div>
+                                    <p>2 шт.</p>
+                                </li>
+                                <li>
+                                    <div>
+                                        <img src="./img/slavyanka.png">
+                                        <h3>Славяночка шоколадная</h3>
+                                        <p>Славянка</p>
+                                    </div>
+                                    <p>1 шт.</p>
+                                </li>
+                                <li>
+                                    <div>
+                                        <img src="./img/slavyanka.png">
+                                        <h3>Славяночка шоколадная</h3>
+                                        <p>Славянка</p>
+                                    </div>
+                                    <p>1 шт.</p>
+                                </li>
+                                <li>
+                                    <div>
+                                        <img src="./img/slavyanka.png">
+                                        <h3>Славяночка шоколадная</h3>
+                                        <p>Славянка</p>
+                                    </div>
+                                    <p>3 шт.</p>
+                                </li>
+                                <li>
+                                    <div>
+                                        <img src="./img/slavyanka.png">
+                                        <h3>Славяночка шоколадная</h3>
+                                        <p>Славянка</p>
+                                    </div>
+                                    <p>1 шт.</p>
+                                </li>
+                                <li>
+                                    <div>
+                                        <img src="./img/slavyanka.png">
+                                        <h3>Славяночка шоколадная</h3>
+                                        <p>Славянка</p>
+                                    </div>
+                                    <p>1 шт.</p>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </section>
                 </div>
             </div>
             @@include('html/popular.html', {"title": "Похожие товары"})
             @@include('html/faq.html', {})
         </main>
-        <div id="test" style="height: 500px;"></div>
         @@include('html/footer.html',{})
         <div id="photo" class="popup">
             <div class="popup__container">
