--- a/src/catalog.html
+++ b/src/catalog.html
@@ -31,10 +31,10 @@
                                 <button class="select__btn"></button>
                                 <ul class="select__list">
                                     <li class="select__option">
-                                        <a href="#">Сначала дорогие</a>
+                                        <a href="#" class="select__link">Сначала дорогие</a>
                                     </li>
                                     <li class="select__option">
-                                        <a href="#">Сначала дешевые</a>
+                                        <a href="#" class="select__link">Сначала дешевые</a>
                                     </li>
                                 </ul>
                             </div>
@@ -42,13 +42,13 @@
                                 <button class="select__btn"></button>
                                 <ul class="select__list">
                                     <li class="select__option">
-                                        <a href="#">Показать по 25</a>
+                                        <a href="#" class="select__link">Показать по 25</a>
                                     </li>
                                     <li class="select__option">
-                                        <a href="#">Показать по 50</a>
+                                        <a href="#" class="select__link">Показать по 50</a>
                                     </li>
                                     <li class="select__option">
-                                        <a href="#">Показать по 75</a>
+                                        <a href="#" class="select__link">Показать по 75</a>
                                     </li>
                                 </ul>
                             </div>
