--- a/src/html/add-to-cart.html
+++ b/src/html/add-to-cart.html
@@ -1,4 +1,4 @@
-<section class="section background-white">
+<section class="section">
     <div class="page__container">
         <div style="max-width: 1250px;" class="section__with-arrows">
             <h2 class="section__title section__title_left">@@title</h2>
@@ -7,7 +7,7 @@
                 <button class="arrow arrow_right swiper-button-popular-next"></button>
             </div>
         </div>
-        <div class="swiper popular">
+        <div class="swiper popular addCart">
             <div class="swiper-wrapper swiper-wrapper-popular">
                 <div class="swiper-slide">
                     <li class="catalog__item ">
