--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,58 @@
 		@@include('html/header.html',{})
 
 		<main>
+			<div class="banner">
+				<div class="swiper swiper-banner">
+					<div class="swiper-button-next"></div>
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img class="banner__img banner__img_small" src="">
+							<img class="banner__img banner__img_big" src="./img/banners/banner1-big.png">
+							<div class="page__container">
+								<div class="banner__main">
+									<h2 class="banner__title">Подарки для мужчин на 23 февраля</h2>
+									<p class="banner__subtitle">Коллекция 2022 года оптом
+										и в розницу </p>
+								</div>
+								<a href="./catalog.html" class="btn banner__btn">Подобрать подарки</a>
+							</div>
+
+						</div>
+						<div class="swiper-slide">
+							<img class="banner__img banner__img_small" src="">
+							<img class="banner__img banner__img_big" src="./img/banners/banner2-big.png">
+							<div class="page__container">
+								<div class="banner__main">
+									<h2 class="banner__title">Подарки для женщин на 8 марта</h2>
+									<p class="banner__subtitle">Коллекция 2022 года оптом
+										и в розницу </p>
+								</div>
+								<a href="./catalog.html" class="btn banner__btn">Подобрать подарки</a>
+							</div>
+
+						</div>
+						<div class="swiper-slide">
+							<img class="banner__img banner__img_small" src="">
+							<img class="banner__img banner__img_big" src="./img/banners/banner3-big.png">
+							<div class="page__container">
+								<div class="banner__main">
+									<h2 class="banner__title">Новогодние подарки</h2>
+									<p class="banner__subtitle">Коллекция 2022 года оптом
+										и в розницу </p>
+								</div>
+								<a href="./catalog.html" class="btn banner__btn">Подобрать подарки</a>
+							</div>
+
+						</div>
+						<div class="swiper-slide">
+							<img class="banner__img banner__img_small" src="">
+							<img class="banner__img banner__img_big" src="./img/banners/banner4-big.png">
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+			</div>
 			<section class="section background-lightgray">
 				<div class="page__container">
 					<h2 class="section__title">Подарки на <span class="red">новый год</span></h2>
@@ -39,7 +91,7 @@
 			</section>
 			<section class="section background-lightgray">
 				<div class="page__container">
-					<h2 class="section__title section__title_left">Мы фабрика подарков</h2>
+					<h1 class="section__title section__title_left">Мы фабрика подарков</h1>
 					@@include('html/we.html', {})
 				</div>
 			</section>
@@ -61,7 +113,7 @@
 		<div id="thanks" class="popup">
 			<div class="popup__container">
 				<div class="popup__content">
-					<p  class="thanks">Ваш вопрос отправлен успешно! <br> Мы с вами свяжемся в ближайшее время!</p>
+					<p class="thanks">Ваш вопрос отправлен успешно! <br> Мы с вами свяжемся в ближайшее время!</p>
 				</div>
 				<button class="popup__close">✖</button>
 			</div>
