--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,10 @@
 				<div class="swiper swiper-banner">
 					<div class="swiper-button-next"></div>
 					<div class="swiper-button-prev"></div>
+
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<img class="banner__img banner__img_small" src="">
+							<img class="banner__img banner__img_small" src="./img/banners/banner1-small.png">
 							<img class="banner__img banner__img_big" src="./img/banners/banner1-big.png">
 							<div class="page__container">
 								<div class="banner__main">
