--- a/cart.html
+++ b/cart.html
@@ -736,7 +736,7 @@
         <div id="order" class="popup">
             <div class="popup__container">
                 <div class="popup__content">
-                    <div style="overflow: auto;" class="swiper order-swiper">
+                    <div class="swiper order-swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <form class="form order">
