--- a/src/catalog.html
+++ b/src/catalog.html
@@ -26,7 +26,7 @@
                         <p class="catalog__counter"><span><b>250 подарков</b> найдено</span></p>
                         <div class="selects">
                             <button data-pointer="filter" class="select select_empty"><b>Фильтр</b></button>
-                            <button data-pointer="left-menu" class="select select_empty"><b>Другие подарки</b></button>
+                            <button data-pointer="left-menu" class="select select_empty"><b>Выбрать раздел</b></button>
                             <div class="select">
                                 <button class="select__btn"></button>
                                 <ul class="select__list">
