--- a/src/html/header.html
+++ b/src/html/header.html
@@ -5,7 +5,7 @@
             <svg>
                 <use href="./img/icons/icons.svg#address"></use>
             </svg>
-            <p><span>Сургут</span> Индустриальная 34, оф. 21</p>
+            <p><span>Сургут</span> <span>Индустриальная 34, оф. 21</span></p>
         </div>
         <ul class="menu header__menu">
             <li class="menu__item menu__item_dropdown">
